: Dynamic Greenlight data will only be pulled if the user is signed in to Steam
: Performance surveys will no longer be displayed on streaming video store pages
: Fixed some layout and formatting issues while browsing the badges page in Binder View
: Fixed a bug where Metacritic scores would sometimes show NaN/100 if score was not found


v7.6
-----
+ Added an option to use dynamic data while browsing Greenlight pages
+ Added performance survey data and links to applicable store pages
+ Added Twitch integration to Steam profiles that contain a link to the user's Twitch page
+ Added "Add to Cart" buttons back to wishlist pages
+ Added sorting options to "Friends who play" pages
+ Enhanced Steam will now remember whether you've accepted the SSA when buying and selling items
: Updated and localized Early Access banner images
: Fixed an issue with remaining card drop calculations on badge pages
: Fixed bug that would cause very large wishlists to sometimes crash the browser after loading
: Fixed a bug that caused cart errors when using the "Empty Cart" feature

v7.5.2
-----
+ Added a "Get Help" button to store pages that links to that game's personal support portal
: Updated highlighting for the summer sale home page

v7.5.1
-----
+ Added Blue profile theme by Teliko
: Fixed a bug that caused Early Access banners not to be displayed
: Fixed a bug that caused badge completion costs to be in an incorrect currency for some users

v7.5
-----
+ Added player data from steamspy.com to app pages (thanks galyonkin!)
+ Added support for Coinbase.io and Funstock Digital to price comparisons
+ Added support for setting custom profile themes
+ Added Purple, Yellow, Red, Green, Pink, Orange, and Teal profile themes by Teliko
+ Added Clear profile theme
: Fixed an issue with price data not being in the correct denomination due to a change made by Valve
: Fixed a bug that caused the achievement sorting function not to work correctly