@@ -169,7 +169,6 @@
     "notcommon_label": "Hide games that you own",
     "show_all_steam_releases": "Show all Steam releases",
     "wishlist": "Wishlist",
-    "playfire_heading": "Rewards from Playfire",
     "notdiscounted": "Items not discounted",
     "cancel": "Cancel",
     "wiki_article": "View __pcgw__ Article",
